# cspiro

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: base_fragment.frag  base_vertex.vert
src/: main.cpp
src/application/: application.cpp  application.hpp
src/graphics/: camera.cpp  camera.hpp  line_strip.cpp  line_strip.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  vertex_2d.hpp
src/spirograph/: circle_transform.cpp  circle_transform.hpp  spiro_node.cpp  spiro_node.hpp
